# labwc-prompt

./: Makefile.am  configure.ac
data/: Makefile.am  labwc-prompt.desktop  labwc-prompt.ui  pwdlpr.sh
debian/: changelog  control  copyright  labwc-prompt.install
po/: POTFILES.in
src/: Makefile.am  labwc-prompt.c
